testdata/invalid/import-cycle/root.hzn
package root

import sub "./sub"

type Wrapper struct {
    inner sub.Inner
}
